Inicio do desenvolvimento da tela de login
application.scss
--classes utilizadas na tela de login

auth_controller.rb
--controller relativo as telas de autenticação do sistema, futuras funções relacionadas ao login virão aqui

login.html.erb
--versão inicial da tela de login ainda em desenvolvimento

routes.rb
--mudança da página inicial do sistema para a tela de login

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,2 +1,19 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+.shadow{
+    box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
+}
+
+.login-box{
+    width: 360px;
+    margin: 7% auto;
+}
+
+.login-box-body{
+    background: #fff;
+    padding: 20px;
+    border-top: 0;
+    color: #666;
+    //border: 1px solid black;
+}
