Adição da tela de criação de usuário
Inclui link da tela de login para a tela de criação. Registros são inseridos ao banco.

--- a/app/views/auth/login.html.erb
+++ b/app/views/auth/login.html.erb
@@ -22,6 +22,6 @@
     <% end %>
 
     <%# TODO: O "Cadastro" na linha abaixo é um placeholder, colocar a rota correta quando a página de cadastro for criada %>
-    <p class="text-center">Novo usuário? <%= link_to "Cadastre-se agora!", "Cadastro" %></p>
+    <p class="text-center">Novo usuário? <%= link_to "Cadastre-se agora!", "cadastrar_usuario" %></p>
   </div>
 </div>
