--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,6 @@
-<nav class="navbar navbar-light" style="background-color: #e3f2fd;">
-  <a class="navbar-brand" href="#">
-    <p> <font color="187347"> Colabs </font></p>
+<nav class="navbar navbar-expand-lg fixed-top" role="navigation" style="background-color: #3b7d6b">
+  <a class="navbar-brand" href="/">
+  <img src="assets/colabs1.jpeg" width="30" height="30" class="d-inline-block align-top" alt="">
+    
   </a>
 </nav>
