--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,4 @@
+<body style="background-color: #d7fcf2">
 <div class="row">
     <div>
         <h1 class="text-center" >Criação de usuário</h1>
@@ -31,3 +32,4 @@
         <% end %>
     </div>
 </div>
+</body>
