--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,13 @@
-<nav class="navbar navbar-expand-lg fixed-top" role="navigation" style="background-color: #3b7d6b">
-  <a class="navbar-brand" href="/">
-  <img src="assets/colabs1.jpeg" width="30" height="30" class="d-inline-block align-top" alt="">
-    
-  </a>
+<nav class="navbar navbar-expand-lg fixed-top" role="navigation" style="background-color: #227a67">
+  
+</nav>
+
+<nav class="navbar navbar-default navbar-fixed-top" style="background-color: #227a67">
+<div class="container">
+  <div class="navbar-header" class="w-75 p-3">
+    <a class="navbar-brand" href="/">
+      <img src="assets/colabs1.jpeg" width="30" height="30" class="d-inline-block align-top" alt="">
+    </a>
+  </div>
+</div>
 </nav>
