Utilizando o create(POST) do rails para criar usuario

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -24,7 +24,7 @@
 
             <div class="form-group">
                 <%= f.label :"Confirmar senha" %>
-                <%= f.text_field :password_confirmation, class:"form-control" %>
+                <%= f.password_field :password_confirmation, class:"form-control" %>
             </div>
 
             <%=f.submit "Entrar no Colabs!", class:"col-md-6 col-md-offset-3 col-xs-12 btn btn-primary" %>
