--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,14 @@
 
   <body>
     <%= render 'layouts/header' %>
+    <!TODO Fazer isso mais bonito -->
+    <!–– apenas inclui para exibir menssagem alerta -->
+	<% if notice %>
+		<%= notice %>
+	<% end %>
+	<% if alert %>
+		<%= alert %>
+	<% end %>
     <%= yield %>
   </body>
 </html>
