--- a/app/views/auth/login.html.erb
+++ b/app/views/auth/login.html.erb
@@ -1,35 +1,35 @@
 <% provide(:title, "Login") %>
 <body style="background-color: #d7fcf2">
-<div class="row">
-  <div class="login-box-body border" style="background-color: #d7fcf2">
-    <img src="assets/colabs3.jpeg" class="img-responsive center-block">
+  <div class="row">
+    <div class="login-box-body border" style="background-color: #d7fcf2">
+      <img src="assets/colabs3.jpeg" class="img-responsive center-block">
+    </div>
   </div>
-</div>
 
-<div class="row login-box shadow">
-  <div class="login-box-body border">
+  <div class="row login-box shadow">
+    <div class="login-box-body border">
 
-    <h1 class="text-center">Login</h1>
-  
-    <%# TODO: O "login" na linha abaixo é um placeholder, colocar a rota correta quando a função de login for implementada %>
-    <%= form_for(:session, url: "login") do |f| %>
+      <h1 class="text-center">Login</h1>
 
-    <div class="form-group">
-      <%#= f.label :email %>
-      <%= f.email_field :email, class: 'form-control', placeholder: "Email" %>
+      <%# TODO: O "login" na linha abaixo é um placeholder, colocar a rota correta quando a função de login for implementada %>
+      <%= form_for(:session, url: enter_path) do |f| %>
+
+      <div class="form-group">
+        <%#= f.label :email %>
+        <%= f.email_field :email, class: 'form-control', placeholder: "Email" %>
+      </div>
+
+      <div class="form-group">
+        <%#= f.label :password %>
+        <%= f.password_field :password, class: 'form-control', placeholder:"Senha" %>
+      </div>
+
+      <div class="form-group">
+        <%= f.submit "Login", class: "btn btn-primary btn-block" %>
+      </div>
+      <% end %>
+
+      <p class="text-center">Novo usuário? <%= link_to "Cadastre-se agora!", "cadastrar_usuario" %></p>
     </div>
-
-    <div class="form-group">
-      <%#= f.label :password %>
-      <%= f.password_field :password, class: 'form-control', placeholder:"Senha" %>
-    </div>
-
-    <div class="form-group">
-      <%= f.submit "Login", class: "btn btn-primary btn-block" %>
-    </div>
-    <% end %>
-
-    <p class="text-center">Novo usuário? <%= link_to "Cadastre-se agora!", "cadastrar_usuario" %></p>
   </div>
-</div>
 </body>
