Atualização para o Bootstrap 4
Instalada a Gem do bootstrap 4

Instalada a Gem do jQuery pois ela é necessária para o bootstrap

Mudança no nome da rota da tela principal de "teste" para "index"

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,17 @@
-<nav class="navbar navbar-expand-lg fixed-top" role="navigation" style="background-color: #3b7d6b">
+<nav class="navbar navbar-expand-lg" role="navigation" style="background-color: #3b7d6b">
   <a class="navbar-brand" href="/">
   <img src="assets/colabs1.jpeg" width="30" height="30" class="d-inline-block align-top" alt="">
     
   </a>
+
+  <div class="dropdown pull-left">
+  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    Dropdown button
+  </button>
+  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+    <a class="dropdown-item" href="#">Action</a>
+    <a class="dropdown-item" href="#">Another action</a>
+    <a class="dropdown-item" href="#">Something else here</a>
+  </div>
+  </div>
 </nav>
