--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,4 @@
-@import "bootstrap-sprockets";
+//@import "bootstrap-sprockets";
 @import "bootstrap";
 
 .shadow{
@@ -16,4 +16,8 @@
     border-top: 0;
     color: #666;
     //border: 1px solid black;
+}
+
+.navbar{
+    margin-bottom: 20px;
 }
