--- a/app/views/auth/login.html.erb
+++ b/app/views/auth/login.html.erb
@@ -1,13 +1,13 @@
 <% provide(:title, "Login") %>
 <body style="background-color: #d7fcf2">
-  <div class="row">
-    <div class="login-box-body border" style="background-color: #d7fcf2">
-      <img src="assets/colabs3.jpeg" class="img-responsive center-block">
-    </div>
-  </div>
 
-  <div class="row login-box shadow">
-    <div class="login-box-body border">
+    <div class="login-box-body" style="background-color: #d7fcf2">
+      <img src="assets/colabs3.jpeg" class="img-responsive mx-auto d-block">
+    </div>
+
+
+  <div class="login-box shadow">
+    <div class="login-box-body">
 
       <h1 class="text-center">Login</h1>
 
