--- a/app/views/inicial/index.html.erb
+++ b/app/views/inicial/index.html.erb
@@ -1,12 +1,10 @@
 <body style="background-color: #d7fcf2">
-  <div class="row">
-    <div class="login-box-body border" style="background-color: #d7fcf2">
-      <img src="assets/colabs3.jpeg" class="img-responsive center-block">
-    </div>
+  <div class="login-box-body" style="background-color: #d7fcf2">
+    <img src="assets/colabs3.jpeg" class="img-responsive mx-auto d-block">
   </div>
 
-  <div class="row login-box shadow">
-    <div class="login-box-body border">
+  <div class="login-box shadow">
+    <div class="login-box-body">
 
       <h3 class="text-center">Bem vindo ao Colabs, <%= current_user.nome %>!</h1>
 
