Commit inicial - Tela Edição Usuario
Remoção de todos as tags styles, estilos movidos para o arquivo scss
Implementação inicial do Update de usuário
Mudança na verificação de email para verificar apenas quando cria
Correção nos paths de imagem
Link para a página de edição de usuário no navbar
Nova página de edição de usuário
Utilização de uma partial para evitar repetição de código nas páginas de form do usuario (o form está contido no arquivo _form e algumas partes váriaveis são definidas através de parametros nos arquivos new e edit)
Novas rotas de páginas e ações para editar o usuario

--- a/app/views/auth/login.html.erb
+++ b/app/views/auth/login.html.erb
@@ -1,8 +1,8 @@
 <% provide(:title, "Login") %>
-<body style="background-color: #d7fcf2">
+<body >
 
-    <div class="login-box-body" style="background-color: #d7fcf2">
-      <img src="assets/colabs3.jpeg" class="img-responsive mx-auto d-block">
+    <div>
+      <img src="/assets/colabs3.jpeg" class="img-responsive mx-auto d-block">
     </div>
 
 
