--- a/app/views/inicial/index.html.erb
+++ b/app/views/inicial/index.html.erb
@@ -1,6 +1,6 @@
-<body style="background-color: #d7fcf2">
-  <div class="login-box-body" style="background-color: #d7fcf2">
-    <img src="assets/colabs3.jpeg" class="img-responsive mx-auto d-block">
+<body >
+  <div>
+    <img src="/assets/colabs3.jpeg" class="img-responsive mx-auto d-block">
   </div>
 
   <div class="login-box shadow">
