--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,19 @@
-<nav class="navbar navbar-expand-lg" role="navigation" style="background-color: #3b7d6b">
+<nav class="navbar navbar-expand-lg justify-content-between" role="navigation" >
   <a class="navbar-brand" href="/">
-  <img src="assets/colabs1.jpeg" width="30" height="30" class="d-inline-block align-top" alt="">
+  <img src="/assets/colabs1.jpeg" width="30" height="30" class="d-inline-block align-top" alt="">
     
   </a>
 
+  <div>
+    <% if current_user %>
+      <div class="dropdown">
+        <button class="btn btn-outline-dark dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <%= current_user.nome %>
+        </button>
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+          <%= link_to "Minha Conta", editar_usuario_path, class:"dropdown-item" %>
+        </div>
+      </div>
+    <% end %>
+  </div>
 </nav>
