--- a/app/views/auth/login.html.erb
+++ b/app/views/auth/login.html.erb
@@ -7,7 +7,7 @@
 
 
   <div class="login-box shadow">
-    <div class="login-box-body">
+    <div class="login-box-body" id ="login-box">
 
       <h1 class="text-center">Login</h1>
 
