--- a/app/views/inicial/index.html.erb
+++ b/app/views/inicial/index.html.erb
@@ -4,7 +4,7 @@
   </div>
 
   <div class="login-box shadow">
-    <div class="login-box-body">
+    <div class="login-box-body" id="inicial-page">
 
       <h3 class="text-center">Bem vindo ao Colabs, <%= current_user.nome %>!</h1>
 
