Melhorias na edição de Usuarios
mensagens de sucesso e erro ao editar usuários
mudança na maneira de verificar a senha para permitir update de usuários sem mudar a senha
ajustes nos testes do cucumber(ainda não estão 100%)

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,5 +1,15 @@
 <body >
 <div class="">
+    <% if flash[:notice] %>
+        <div class="alert alert-warning" role="alert">
+            <%= flash[:notice] %>
+        </div>
+    <% end %>
+    <% if flash[:success] %>
+        <div class="alert alert-success" role="alert">
+            <%= flash[:success] %>
+        </div>
+    <% end %>
     <div>
         <h1 class="text-center" ><%= texto_descritivo %></h1>
     </div>
@@ -31,12 +41,6 @@
 
         <% end %>
     </div>
-    <div>
-        <% @user.errors.full_messages.each do |msg| %>
-            <div class="alert alert-danger" role="alert">
-                <%= msg %>
-            </div>
-        <% end %>
-    </div>
+    
 </div>
 </body>
