--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,7 +12,7 @@
         </button>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
           <%= link_to "Minha Conta", editar_usuario_path, class:"dropdown-item" %>
-          <a class="dropdown-item" href="#">Meus Projetos</a>
+          <%= link_to "Meus Projetos", meus_projetos_path, class:"dropdown-item" %>
           <%= link_to 'Sair', logout_path, method: :delete %>
         </div>
       </div>
