--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,7 @@
 //@import "bootstrap-sprockets";
 @import "bootstrap";
+//@import "font awesome for rails";
+@import "font-awesome";
 
 .shadow{
     box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
@@ -25,4 +27,19 @@
 
 body{
     background-color: #d7fcf2
+}
+
+.card-columns {
+    @include media-breakpoint-only(lg) {
+      column-count: 4;
+    }
+    @include media-breakpoint-only(xl) {
+      column-count: 4;
+    }
+
+    margin: 2% 5%;
+  }
+
+.card-footer, .card-header{
+    background-color: #fff;
 }
