Alteração na tela de projetos para inclusão da funcionalidade de visualização de tarefas, incluindo também a página de tarefas mockup

--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -9,3 +9,8 @@ ul li a:hover { background: black; }
 body{
     background-color: #d7fcf2
 }
+
+.userbox {
+  border: 2px solid #3b7d6b;
+  padding: 10px 10px 10px 10px;
+}
