--- a/app/views/inicial/index.html.erb
+++ b/app/views/inicial/index.html.erb
@@ -18,6 +18,9 @@
           <div class="card-footer">
             <fieldset>
               <div class="pull-right">
+                <%-# Ocultei o botão abaixo pois a página de mockup das tasks ainda não tem relevancia alguma%>
+                <% link_to (fa_icon "tasks"), 'project_tasks', class: "btn btn-info" %>
+			          <%= link_to (fa_icon "edit"), edit_project_path(p),  class: "btn  btn-info" %>
                 <button class="btn btn-primary" title="Gerenciar Membros"><i class="fa fa-users"></i></button>
                 <button class="btn btn-success text-bold" title="Atualizar o Projeto"><i class="fa fa-edit"></i></button>
               </div>
