P-U: botão para a página

--- a/app/views/inicial/index.html.erb
+++ b/app/views/inicial/index.html.erb
@@ -21,7 +21,7 @@
                 <%-# Ocultei o botão abaixo pois a página de mockup das tasks ainda não tem relevancia alguma%>
                 <% link_to (fa_icon "tasks"), 'project_tasks', class: "btn btn-info" %>
 			          <%= link_to (fa_icon "edit"), edit_project_path(p),  class: "btn  btn-info" %>
-                <button class="btn btn-primary" title="Gerenciar Membros"><i class="fa fa-users"></i></button>
+			          <%= link_to (fa_icon "users"), projeto_usuario_path,  class: "btn  btn-info", :title => "Gerenciar Usuários" %>
                 <button class="btn btn-success text-bold" title="Atualizar o Projeto"><i class="fa fa-edit"></i></button>
               </div>
             </fieldset>
