--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,6 +19,14 @@
     //border: 1px solid black;
 }
 
+.table-margin{
+  margin-top: 50px;
+  width: 80%;
+  margin-left: 10%;
+  margin-right: 10%;
+  background: #fff;
+}
+
 .navbar{
     margin-bottom: 20px;
     background-color: #3b7d6b
