Added search bar into index page
Still need to insert code

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,6 +3,14 @@
   <img src="/assets/colabs1.jpeg" width="30" height="30" class="d-inline-block align-top" alt="">
 
   </a>
+ <form class="form-inline">
+	 <div class="input-group">
+		 <input type="text" class="form-control" placeholder="Encontre seus recursos">
+		 <div class="input-group-append"><button class="btn btn-dark" type="button"><i class="fa fa-search"></i>
+			 </button>
+		 </div>
+	 </div>
+ </form>
 
     <%if user_signed_in? %>
   <div>
