--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
 		 <%= text_field_tag :search_term, params[:search_term], class:"form-control" %>
 	 </div>
 	<div class="input-group-append">
-		<%= submit_tag "search", name: nil, class:"btn btn-dark" %>
+		<%= submit_tag 'Buscar', class:"btn btn-dark" %>
 	</div>
 
 <% end %>
