--- a/app/views/project_users/new.html.erb
+++ b/app/views/project_users/new.html.erb
@@ -4,9 +4,8 @@
     <ul class="list-group ">
     	<% @tmembros.each do |m| %>
 		    <li class="float-left, background-color: transparent !important userbox">
-			    <%= m.nome %> |
-          <%= link_to 'ADD', inserir_project_user_path(m), class: "btn btn-info fa fa-tasks" %>
-          #acho que eu preciso criar um novo controller
+			    <%= m.nome %> | 
+          <%= link_to 'ADD', adduser_path(m), class: "btn btn-cross", method: :post %>
 		    </li>
 	    <% end %>
     </ul>
