--- a/app/views/project_users/edit.html.erb
+++ b/app/views/project_users/edit.html.erb
@@ -3,7 +3,8 @@
     <ul class="list-group ">
     	<% @membros.each do |m| %>
 		    <li class="float-left, background-color: transparent !important userbox">
-			    <%= m.nome %>
+				<%= m.nome %>
+				<%= link_to 'remover', rmuser_path(m),  class: "btn  btn-off" %>
 	    <% end %>
 	</ul>
 	<%= link_to 'Novo membro', new_project_user_path(@project) %>
