--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -2,9 +2,36 @@
   <div>
     <img src="/assets/colabs3.jpeg" class="img-responsive mx-auto d-block">
   </div>
+  <% if flash[:success] %>
+  <div class="container">
+    <div class="row" style="z-index: 999; padding: 5px;">
+         <div class="span12">
+           <div class="alert alert-success alert-dismissible">
+             <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+             <strong>Success!</strong> <%= flash[:success] %>
+           </div>
+         </div>
+    </div>
+  </div>
+  <% end %>
+  <% if flash[:notice] %>
+  <div class="container">
+    <div class="row" style="z-index: 999; padding: 5px;">
+         <div class="span12">
+           <div class="alert alert-warning alert-dismissible">
+             <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+             <strong>Warning!</strong> <%= flash[:notice] %>
+           </div>
+         </div>
+    </div>
+  </div>
+  <% end %>
   <div class="ui">
-	<nav class="navbar app" style="height: 26px;">Task Board</nav>
-	<nav class="navbar board" id="projectname"><%= @project.name %></nav>
+	<nav class="navbar app" style="height: 26px;display: flex;justify-content: space-between;margin-bottom: 20px;padding-bottom: 45px;">
+      <span>Task Board by Lists</span>
+      <span>Has no lists? Create here <%= link_to '', listas_projeto_url(@project.id), class: "btn btn-info fa fa-list fa-1" %></span>
+  </nav>
+	<nav class="navbar board" id="projectname" style="margin-top: 10px; height: 27px;"><%= @project.name %></nav>
 	<div class="lists">
 		<div class="list">
 			<header id="hd1">Ideas</header>
