Unify list and task pages/functions, adapting controllers and routes

--- a/app/views/tasks/new.js.erb
+++ b/app/views/tasks/new.js.erb
@@ -1,2 +1,4 @@
 $("#modal-window").find(".modal-content").html("<%= j (render 'new') %>");
 $("#modal-window").modal();
+var d = document.getElementById("task_list_id");
+d.className += " form-control";
