--- a/app/views/tasks/_new.html.erb
+++ b/app/views/tasks/_new.html.erb
@@ -5,11 +5,14 @@
 <%= form_for @task, :url => { :action => "create" } do |f| %>
 <div class="modal-body" style="color: #000000;">
   <div class="form-group">
-    <%= f.hidden_field :project_id, :value => params[:project_id]%>
+    <%= f.hidden_field :project_id, :value => params[:project_id] %>
     <%= f.text_field :name, class: 'form-control input-lg', placeholder: "Nome da task" %>
   </div>
   <div class="form-group">
     <%= f.text_area :desc, class: 'form-control input-lg', placeholder: "Descreva a task" %>
+  </div>
+  <div class="form-group">
+    <%= f.select :list_id, @arrayList.collect { |listA| [listA["name"], listA["id"]] }, class: 'form-control' %>
   </div>
 </div>
 <div class="modal-footer">
