--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -29,14 +29,20 @@
   <div class="ui">
 	<nav class="navbar app" style="height: 26px;display: flex;justify-content: space-between;margin-bottom: 20px;padding-bottom: 45px;">
       <span>Task Board by Lists</span>
+      <div id="modal-window" class="modal hide fade" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content"></div>
+        </div>
+      </div>
       <span>Has no lists? Create here <%= link_to '', listas_projeto_url(@project.id), class: "btn btn-info fa fa-list fa-1" %></span>
   </nav>
 	<nav class="navbar board" id="projectname" style="margin-top: 10px; height: 27px;"><%= @project.name %></nav>
 	<div class="lists">
+    <% @lists.each do |list| %>
 		<div class="list">
-			<header id="hd1">Ideas</header>
+			<header id="hd1"><%= list.name %></header>
 			<ul>
-        <% @tasks.each do |task| %>
+        <% list.tasks.each do |task| %>
   		    <li>
   			    <h6><em><%= task.name %></em></h6>
             <br>
@@ -44,55 +50,9 @@
   		    </li>
   	    <% end %>
 			</ul>
-			<footer><%= link_to 'Add a card...', new_task_path(:project_id => @project.id),  {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-window'}  %></footer>
+			<footer><%= link_to 'Add a card...', new_task_path(:project_id => @project.id, :list_id => list.id),  {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-window'}  %></footer>
 		</div>
-		<div class="list">
-			<header id="hd2">Currently Researching</header>
-			<ul>
-
-			</ul>
-			<footer>Add a card...</footer>
-		</div>
-		<div class="list">
-			<header id="hd3">Backlog</header>
-			<ul>
-
-			</ul>
-			<footer>Add a card...</footer>
-		</div>
-    <div id="modal-window" class="modal hide fade" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content"></div>
-      </div>
-    </div>
-		<div class="list">
-			<header id="hd4">In Progress</header>
-			<ul>
-
-			</ul>
-			<footer>Add a card...</footer>
-		</div>
-		<div class="list">
-			<header id="hd5">Client Pendence</header>
-			<ul>
-
-			</ul>
-			<footer>Add a card...</footer>
-		</div>
-		<div class="list">
-			<header id="hd6">QA</header>
-			<ul>
-
-			</ul>
-			<footer>Add a card...</footer>
-		</div>
-		<div class="list">
-			<header id="hd7">Done</header>
-			<ul>
-
-			</ul>
-			<footer>Add a card...</footer>
-		</div>
+    <% end %>
 	</div>
 </div>
 </body>
