--- a/app/views/project_users/new.html.erb
+++ b/app/views/project_users/new.html.erb
@@ -4,8 +4,8 @@
     <ul class="list-group ">
         <% @tmembros.each do |m| %>
 		    <li class="float-left, background-color: transparent !important userbox">
-			    <%= m.nome %> | 
-                <%= link_to 'ADD', adduser_path(m), class: "btn btn-cross", method: :post %>
+			    <%= m.nome %> |  
+                <%= link_to 'Adicionar', adduser_path(m), class: "btn btn-info", method: :post %>
             </li>
         <% end %>
     </ul>
