Deleção de lists
método para deleção de lists no controller
método para checar se uma lista é deletável no model (listas com tasks vinculadas não podem ser deletadas)
alteração na view das lists para mostrar número de atividades de cada uma e o botão de deleção
testes unitarios, funcionais e de aceitação dessa feature
correção no rspec do projectuserscontroller

--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -38,6 +38,7 @@
         <tr>
             <td>Nome</td>
             <td>Descrição</td>
+            <td>Número de atividades</td>
         </tr>
     </thead>
     <tbody>
@@ -45,6 +46,10 @@
             <tr>
                 <td><%= list.name %></td>
                 <td><%= list.desc %></td>
+                <td><%= list.tasks.length %></td>
+                <td>
+                    <%= link_to '', list_url(list), method: 'delete', class: "btn btn-danger fa fa-times" %>
+                </td>
             </tr>
         <%end %>
     </tbody>
