--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,7 +22,7 @@
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
           <%= link_to "Minha Conta", editar_usuario_path, class:"dropdown-item" %>
           <%= link_to "Meus Projetos", meus_projetos_path, class:"dropdown-item" %>
-          <%= link_to 'Sair', logout_path, method: :delete %>
+          <%= link_to "Sair", logout_path, class:"dropdown-item", method: :delete %>
         </div>
       </div>
     <% else %>
