correção de texto do link na página de editar colaboradores

--- a/app/views/project_users/edit.html.erb
+++ b/app/views/project_users/edit.html.erb
@@ -11,5 +11,5 @@
         <% end %>
 	    <% end %>
 	</ul>
-	<%= link_to params['id'], new_project_user_path() %>
+	<%= link_to 'Novo membro', new_project_user_path() %>
 </div>
