--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -39,7 +39,7 @@
           <div class="modal-content"></div>
         </div>
       </div>
-      <span>Create lists here <%= link_to '', listas_projeto_url(@project.id), class: "btn btn-info fa fa-list fa-1" %></span>
+      <span>Create lists here <%= link_to '', listas_projeto_url(@project.id), class: "btn btn-info fa fa-list fa-1", id: "list_button" %></span>
   </nav>
 	<nav class="navbar board" id="projectname" style="margin-top: 10px; height: 27px;"><%= @project.name %></nav>
 	<div class="lists">
@@ -50,15 +50,15 @@
         <% list.tasks.each do |task| %>
   		    <li>
             <div style="display: flex;justify-content: space-between;">
-              <h6><em><%= task.name %></em></h6>
-              <h6><%= link_to 'EDIT', edit_task_path(:project_id => @project.id, :list_id => list.id, :id => task.id),  {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-edit'} %></h6>
+              <h6><em name="<%= task.name -%>"><%= task.name %></em></h6>
+              <h6><%= link_to 'EDIT', edit_task_path(:project_id => @project.id, :list_id => list.id, :id => task.id),  {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-edit', 'id' => task.name << '_id'} %></h6>
             </div>
             <br>
   			    <%= task.desc %>
   		    </li>
   	    <% end %>
 			</ul>
-			<footer><%= link_to 'Add a card...', new_task_path(:project_id => @project.id, :list_id => list.id),  {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-window'}  %></footer>
+			<footer><%= link_to 'Add a card...', new_task_path(:project_id => @project.id, :list_id => list.id),  {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-window', 'id' => list.name << '_id'}  %></footer>
 		</div>
     <% end %>
 	</div>
