--- a/app/views/inicial/index.html.erb
+++ b/app/views/inicial/index.html.erb
@@ -4,25 +4,24 @@
   </div>
 
 
-  <% if @projetos.length > 0 %>
-    <div class="card-columns">
-      <% @projetos.each do |p| %>
+  <% if @projects.length > 0 %>
+    <div class="card-columns" style="margin-left: 623px;">
+      <% @projects.each do |p| %>
         <div class="card">
           <div class="card-header">
             <h3 class="card-title"><%=p.name%></h3>
           </div>
           <div class="card-body">
-            
+
             <p class="card-text"><%= p.desc %></p>
           </div>
           <div class="card-footer">
             <fieldset>
               <div class="pull-right">
-                <%-# Ocultei o botão abaixo pois a página de mockup das tasks ainda não tem relevancia alguma%>
-                <%= link_to (fa_icon "list"), listas_projeto_url(:project_id => p.id),  class: "btn btn-info" %>
-			          <%= link_to (fa_icon "edit"), edit_project_path(p),  class: "btn  btn-info" %>
+                <%= link_to (fa_icon "list"), listas_projeto_url(:project_id => p.id),  class: "btn btn-info", :title => "Gerenciar Listas" %>
+			          <%= link_to (fa_icon "edit"), edit_project_path(p),  class: "btn  btn-info", :title => "Editar Projeto" %>
 			          <%= link_to (fa_icon "users"), edit_project_user_path(p),  class: "btn  btn-info", :title => "Gerenciar Usuários" %>
-                <%= link_to (fa_icon "tasks"), project_task_path(:project_id => p.id), class: "btn btn-success text-bold" %>
+                <%= link_to (fa_icon "tasks"), project_task_path(:project_id => p.id), class: "btn btn-success text-bold", :title => "Gerenciar Tasks" %>
               </div>
             </fieldset>
           </div>
@@ -44,5 +43,5 @@
     </div>
   <% end %>
 
-  
+
 </body>
