--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,12 +1,12 @@
 <body >
 <div class="">
     <% if flash[:notice] %>
-        <div class="alert alert-warning" role="alert">
+        <div class="alert alert-warning alert-dismissible" role="alert">
             <%= flash[:notice] %>
         </div>
     <% end %>
     <% if flash[:success] %>
-        <div class="alert alert-success" role="alert">
+        <div class="alert alert-success alert-dismissible" role="alert">
             <%= flash[:success] %>
         </div>
     <% end %>
@@ -41,6 +41,6 @@
 
         <% end %>
     </div>
-    
+
 </div>
 </body>
